# rpi-pico-projects

./: README.md
audio-spectrum/: CMakeLists.txt  i2s.pio  microphone.c  readme
audio-spectrum/gnuplot/: spectrum.data  spectrum.gnp  spectrum.pl
audio-spectrum/include/: fft.c  fft_calc.c
heartrate/: 2core_tcp_heartrate.c  CMakeLists.txt  index.html  readme
heartrate/dsp/: chebbpf.bkp  chebbpf.h
heartrate/gnuplot/: heart.data  heart.gnp  heart.pl  readme
heartrate/include/: i2c.h  peak_detect.h  ssd1306.h  tcp_server.c
imu-pico/: CMakeLists.txt  imu.c
imu-pico/include/: attitude.c  bmp280.c  i2c.h  qmc5883l.c  ssd1306.h
markdown/: proj.md
rp2040-sh/: flash.sh  monitor.sh  program.sh  setenv.sh
rp2040_logic_analyzer/: CMakeLists.txt  highspeed.c  highspeed.pio  logica_core1.h  menu.h  readme
rp2040_logic_analyzer/gnuplot_logic/: loganal.sh  logic_view.pl  logic_view.pl.sav  read_logic  read_logic.c  readme  setup.sh  stty
rp2040_logic_analyzer/include/: core_fifo.c  fft-radix.c  fft_calc.c
ws2812b/ws2812_16x16/: turbo_clormap.c  ws2812b.c
ws2812b/ws2812b-ledscroll/: CMakeLists.txt  books.h  fonttable.h  riverrun.txt  ws2812b.c  ws2812b.pio
